[gd_scene load_steps=16 format=3 uid="uid://bw6tnfwk0opwx"]

[ext_resource type="Script" uid="uid://ww80ywolo800" path="res://Scripts/character_body_2d.gd" id="1_88kja"]
[ext_resource type="Texture2D" uid="uid://cmv3pqghsq1ly" path="res://Assets/Sprites/NewSamuraiSpreadsheet.png" id="2_it8n0"]
[ext_resource type="Script" uid="uid://rgvla6vaxbed" path="res://Scripts/agent_animator.gd" id="3_it8n0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_it8n0"]
radius = 6.0
height = 24.0

[sub_resource type="Animation" id="Animation_pbq55"]
resource_name = "Attack"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 256, 96, 64), Rect2(96, 256, 96, 64), Rect2(192, 256, 96, 64), Rect2(288, 256, 96, 64), Rect2(384, 256, 96, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fxof2"]
resource_name = "Dash"
length = 0.2
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.125, 0.15, 0.175),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 192, 96, 64), Rect2(96, 192, 96, 64), Rect2(96, 192, 96, 64), Rect2(480, 192, 96, 64), Rect2(672, 192, 96, 64)]
}

[sub_resource type="Animation" id="Animation_601d1"]
resource_name = "Death"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.35, 0.4, 0.5, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 384, 96, 64), Rect2(96, 384, 96, 64), Rect2(192, 384, 96, 64), Rect2(288, 384, 96, 64), Rect2(384, 384, 96, 64), Rect2(480, 384, 96, 64), Rect2(576, 384, 96, 64), Rect2(672, 384, 96, 64), Rect2(768, 384, 96, 64), Rect2(864, 384, 96, 64)]
}

[sub_resource type="Animation" id="Animation_pbj7x"]
resource_name = "Fall"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(196, 128, 96, 64)]
}

[sub_resource type="Animation" id="Animation_gbyq6"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 96, 64), Rect2(96, 0, 96, 64), Rect2(192, 0, 96, 64), Rect2(288, 0, 96, 64), Rect2(384, 0, 96, 64)]
}

[sub_resource type="Animation" id="Animation_t38ji"]
resource_name = "Jump"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 128, 96, 64)]
}

[sub_resource type="Animation" id="Animation_it8n0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(96, 64, 96, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_88kja"]
resource_name = "walking"
length = 0.637
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0928, 0.1858, 0.2786, 0.3714, 0.4642, 0.5572),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 64, 96, 64), Rect2(96, 64, 96, 64), Rect2(192, 64, 96, 64), Rect2(288, 64, 96, 64), Rect2(384, 64, 96, 64), Rect2(480, 64, 96, 64), Rect2(576, 64, 96, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pbq55"]
_data = {
&"Attack": SubResource("Animation_pbq55"),
&"Dash": SubResource("Animation_fxof2"),
&"Death": SubResource("Animation_601d1"),
&"Fall": SubResource("Animation_pbj7x"),
&"Idle": SubResource("Animation_gbyq6"),
&"Jump": SubResource("Animation_t38ji"),
&"RESET": SubResource("Animation_it8n0"),
&"walking": SubResource("Animation_88kja")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gbyq6"]
radius = 14.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_it8n0"]
radius = 14.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 259
script = ExtResource("1_88kja")
speed = 7
jump = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_it8n0")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -60)
zoom = Vector2(2, 2)
limit_top = -188
limit_bottom = 200
position_smoothing_speed = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
scale = Vector2(0.7431695, 0.7003409)
texture = ExtResource("2_it8n0")
region_enabled = true
region_rect = Rect2(96, 64, 96, 64)

[node name="AgentAnimator" type="Node2D" parent="." node_paths=PackedStringArray("player_controller", "animationplayer", "sprite")]
script = ExtResource("3_it8n0")
player_controller = NodePath("..")
animationplayer = NodePath("AnimationPlayer")
sprite = NodePath("../Sprite2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AgentAnimator"]
libraries = {
&"": SubResource("AnimationLibrary_pbq55")
}
autoplay = "Idle"

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="dash_again_timer" type="Timer" parent="."]
one_shot = true

[node name="AttackZone" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(20, -17)
shape = SubResource("CapsuleShape2D_gbyq6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(-20, -17)
shape = SubResource("CircleShape2D_it8n0")

[connection signal="animation_finished" from="AgentAnimator/AnimationPlayer" to="AgentAnimator" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_again_timer" to="." method="_on_dash_again_timer_timeout"]
